--- a/src/AutopilotOverride/AutopilotOverride.csproj
+++ b/src/AutopilotOverride/AutopilotOverride.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EA76943D-C265-4E03-9386-FC244A8010BF}</ProjectGuid>
+    <ProjectGuid>{E8AEC689-B5C1-40E8-871C-5AB882D00F60}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DisableIntro</RootNamespace>
-    <AssemblyName>DisableIntro</AssemblyName>
+    <RootNamespace>AutopilotOverride</RootNamespace>
+    <AssemblyName>AutopilotOverride</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -60,7 +60,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DisableIntro.cs" />
+    <Compile Include="AutopilotOverride.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
